--- a/.gitignore
+++ b/.gitignore
@@ -3,7 +3,9 @@
 # These data won't change, and we don't want to give the public access to 
 # RtJ data especially
 
-data inputs/*
+data/inputs/census/*
+data/inputs/recording-the-journey/*
+data/inputs/research-and-statistics/*
 
 # History files
 .Rhistory
