--- a/.gitignore
+++ b/.gitignore
@@ -14,6 +14,10 @@ data/inputs/research-and-statistics/*
 !data/inputs/research-and-statistics/.keep
 
 
+## Large files
+
+data/intermediate/census/merged-data/04_*
+
 
 # History files
 .Rhistory
